# peta-next

./: .gitignore  README.rst
.github/workflows/: build.yml
_content/articles/: calculus-fundamentals.rst  quantum-mechanics.rst  test-article-cli.rst  test.rst
_content/projects/: quantum-simulator.rst  test.rst
_content/snippets/: cpp-algorithms.rst  test.rst
cli/: create-wasm-fallback.sh  init.js  peta  setup-wasm.sh
docs/: architecture.rst
docs/features/: index.rst
peta/: .gitignore  next.config.js  package-lock.json  package.json  postcss.config.js  tsconfig.json
peta/components/: BookGrid.tsx  BookTOC.tsx  BookTableOfContents.tsx  CodeBlock.tsx  ContentGrid.tsx  ContentList.tsx  Layout.tsx  MathRenderer.tsx  ProjectGrid.tsx  ProjectModal.tsx  SearchBar.tsx  SnippetGrid.tsx  SnippetModal.tsx  TableOfContents.tsx  TagFilter.tsx
peta/pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  api-test.tsx  index.tsx  math-test.tsx  test-code-blocks.tsx
peta/processors/rst-parser/: Cargo.toml  build-wasm.sh
peta/processors/rst-parser/src/: lib.rs
peta/scripts/: copy-data.js  process-content.js  render-math.js
peta/styles/: Articles.module.css  BookGrid.module.css  BookTOC.module.css  Books.module.css  Books.module.css.bak  CodeBlock.module.css  Contact.module.css  ContentGrid.module.css  ContentList.module.css  Home.module.css  Layout.module.css  MathRenderer.module.css  Post.module.css  ProjectGrid.module.css  (+8 more)
tests/: README.rst  index-page.test.js  package-lock.json  package.json  playwright.config.js  simple-test.js
tools/: README.rst  init.js  peta
(+37 files in other folders)
