[package]
name = "rst-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
yaml-rust = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]